--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,14 +7,15 @@ tasks:
   - name: Setup Environment
     init: |
       go mod tidy
+      echo "Workspace setup complete."
     command: |
       go run main.go
 
-# ports:
-#   - port: 8080
-#     onOpen: open-preview
-#   - port: 3000
-#     onOpen: open-preview
+ports:
+  - port: 8080
+    onOpen: open-preview
+  - port: 3000
+    onOpen: open-preview
 
 vscode:
   extensions:
@@ -25,6 +26,3 @@ vscode:
 
 env:
   MIRROR_NODE_API_URL: "https://mainnet.mirrornode.hedera.com/api/v1"
-
-after:
-  - echo "Workspace setup complete."
